crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__generic_hash_table_missing_impl.oa.snap
---
source: crates/oac/src/qbe_backend.rs
assertion_line: 2309
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

missing impl Hash for BadKey required by generic HashTable parameter K in specialization BadTable
