crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__integer_i32_add_overflow_fail.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#main#i32#.oac_integer_site_i32__add__62 (root=main, caller=main, op=add, semantic_type=I32, qbe_artifact=site_main_main_i32__oac_integer_site_i32__add__62.qbe, smt_artifact=site_main_main_i32__oac_integer_site_i32__add__62.smt2)
